--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Hyper
 
+0.04_01  Mon Jan  5 13:57:38 2009
+       * fixed CPAN ticket 42099
+
 0.04   Thu Dec 18 17:06:37 CET 2008
        * fixed CPAN ticket 41807
 
